--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "generator-yomern": "^0.0.5"
   },
   "dependencies": {
-    "async": "^1.5.0",
+    "async": "^1.5.2",
     "babel": "^6.0.0",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.1.0",
@@ -48,6 +48,7 @@
     "connect-mongo": "^1.0.2",
     "cookie-parser": "^1.4.0",
     "cors": "^2.6.0",
+    "csvtojson": "^1.1.2",
     "ejs": "^2.3.1",
     "express": "^4.12.4",
     "express-session": "^1.12.1",
