--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-router": "^2.0.0",
     "react-router-bootstrap": "^0.20.1",
     "react-slick": "^0.9.3",
+    "react-swipeable": "^3.9.1",
     "react-tools": "^0.13.3",
     "reactcss": "^0.4.2",
     "reactify": "^1.1.1",
