Update Excellence mobile view

--- a/package.json
+++ b/package.json
@@ -68,17 +68,19 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pm2": "^2.2.3",
-    "react": "^0.14.3",
+    "react": "^0.14.8",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-router": "^2.0.0",
     "react-router-bootstrap": "^0.20.1",
     "react-slick": "^0.9.3",
+    "react-swipe": "^5.0.6",
     "react-swipeable": "^3.9.1",
     "react-tools": "^0.13.3",
     "reactcss": "^0.4.2",
     "reactify": "^1.1.1",
     "source-map": "^0.5.2",
+    "swipe-js-iso": "^2.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
